samples/_failures_safe/1761148008_bf733f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0dab68a.c: In function ‘main’:
./samples/SAFE/__tmp_d0dab68a.c:159: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_d0dab68a.c:158:5: error: expected declaration or statement at end of input
  158 |     if
      |     ^~
